Created a separate style for API level 19+ to use translucent status bar.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
         </activity>
         <activity
             android:name=".ContactViewActivity"
-            android:label="@string/title_activity_contact_view" >
+            android:label="@string/title_activity_contact_view"
+            android:theme="@style/NoActionBar">
         </activity>
     </application>
 
