Created ToolBar UI element to replace a traditional ActionBar to customize the style and to support translucent bars.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         </activity>
         <activity
             android:name=".ContactViewActivity"
-            android:label="@string/title_activity_contact_view"
+            android:label=""
             android:theme="@style/NoActionBar">
         </activity>
     </application>
