--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,8 +18,12 @@
         </activity>
         <activity
             android:name=".ContactViewActivity"
-            android:label=""
-            android:theme="@style/NoActionBar">
+            android:label="@string/title_activity_contact_view"
+            android:theme="@style/NoActionBar" >
+        </activity>
+        <activity
+            android:name=".ContactEditActivity"
+            android:label="@string/title_activity_contact_edit" >
         </activity>
     </application>
 
